Use Collections.singletonList instead of List.of